main/default/objects/DocuSignServiceSettings__c/fields/AccountManagementEndpointURL__c.field-meta.xml
<CustomField>
    <fullName>AccountManagementEndpointURL__c</fullName>
    <label>AccountManagementEndpointURL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>