main/default/objects/DocuSignServiceSettings__c/fields/CredentialEndpointURL__c.field-meta.xml
<CustomField>
    <fullName>CredentialEndpointURL__c</fullName>
    <label>CredentialEndpointURL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>