main/default/objects/DocuSignServiceSettings__c/fields/IntegratorKey__c.field-meta.xml
<CustomField>
    <fullName>IntegratorKey__c</fullName>
    <label>IntegratorKey</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>